fixed spacing bug

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -137,11 +137,16 @@ body {
   border: 2px solid #FF8400;
   color: black;
   margin: 0 5px;
-  padding: 10px 20px;
+  padding: 10px 10px;
   border-radius: 5px;
   text-align: center;
   cursor: pointer;
   box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  display: flex;
+  flex-wrap: nowrap;
+  align-items: center;
+  white-space: nowrap;
+  /* font-size:; */
   
 }
 
@@ -153,6 +158,7 @@ body {
   background-color: #FF8400;
   color: white;
 }
+
 
 .counters {
   width: 100%;
